@@ -13,6 +13,8 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- Multiple fixes to vpgsql.c related to freeing PGresults and
 	  attempting to access NULL PGresults when reporting errors.
 	- Add missing link libs (m, nsl, socket) on Solaris installs.
+	- Fix vsetuserquota() to write properly formatted quota to 
+	  maildirsize file.
 
 5.4.2 - released 22-Feb-04
 
